# finAssistant_mcpserver

./: .env.example  README.md  pyproject.toml
src/: config.py  main.py
src/api_clients/: sec_api_client.py
src/clients/: sec_client.py
src/server/: agent_scope.py  alpha_vantage.py  prompts.py  sec.py  tool_registry.py
src/servers/: agent_scope_server.py  alphavantage_server.py  prompts.py  sec_server.py  tool_registry.py
src/utils/: opik_utils.py
