[project]
name = "finassistant-mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "requests",
    "opik",
    "fastmcp",
    "html2text>=2025.4.15",
    "sec-api>=1.0.32",
    "mcp>=1.17.0",]
